--- a/project.html
+++ b/project.html
@@ -12,7 +12,13 @@
 
         </div>
         <div class="cart-container">
-            <h4>This is cart</h4>
+            <h4>This is cart <span id="count">0</span></h4>
+            <hr>
+            <div id="cart-main-container" class="cart-main-container">
+
+            </div>
+            <hr>
+            <h3>Total: <span id="total"></span></h3>
         </div>
     </div>
 
